--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -2,336 +2,28 @@ name: Deploy Telegram Bot
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r src/requirements.txt
-        pip install pytest
-
-    - name: Run tests
-      run: |
-        cd tests
-        pytest test_bot.py -v
-
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 src/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
   deploy:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r src/requirements.txt
-
-    - name: Deploy to server (example)
-      env:
-        BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      run: |
-        echo "Deploying Telegram bot..."
-        # Aquí puedes agregar los comandos para desplegar tu bot
-        # Por ejemplo, usando SSH, Docker, o ejecutando el bot directamente
-        cd src
-        python bot.py &
-        echo "Bot deployed successfully!"
-        
-    - name: Health check
-      run: |
-        echo "Performing health check..."
-        # Agrega aquí un health check para verificar que el bot está funcionando
-        sleep 10      run: |
-        echo "Performing health check..."
-        # Agrega aquí un health check para verificar que el bot está funcionando
-        sleep 10  branches: [ main ]
-  workflow_dispatch:  # Ejecución manual
-
-jobs:
-  deploy-demo:
-    runs-on: ubuntu-latest
-    environment: demo
-    
-    steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-
-    - name: Configurar Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Instalar dependencias
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyrogram instagrapi pytest
-
-    - name: Crear estructura del proyecto
-      run: |
-        mkdir -p src temp_videos
-        echo "✅ Directorios creados"
-
-    - name: Crear configuración de DEMO
-      run: |
-        cat > src/config.py << 'EOF'
-        # 🚀 CONFIGURACIÓN DE DEMOSTRACIÓN - SIN CREDENCIALES REALES
-        import os
-
-        # Credenciales de TELEGRAM (FICTICIAS)
-        API_ID = 1234567
-        API_HASH = "a1b2c3d4e5f67890abcdef1234567890"
-        BOT_TOKEN = "1234567890:ABCdefGHIjklMnOprSTUvWXYZ1234567890"
-
-        # Credenciales de INSTAGRAM (FICTICIAS)  
-        INSTAGRAM_USERNAME = "demo_instagram_user"
-        INSTAGRAM_PASSWORD = "demo_instagram_password_123"
-
-        # Configuración de la aplicación
-        TEMP_DIR = "temp_videos"
-        DEMO_MODE = True
-        
-        # Información de estado
-        APP_VERSION = "1.0.0-demo"
-        print(f"🤖 Bot de Demo v{APP_VERSION} - Modo demostración activo")
-        EOF
-
-    - name: Crear bot de demostración
-      run: |
-        cat > src/demo_bot.py << 'EOF'
-        # Bot de demostración - Sin funcionalidades reales
-        import os
-        import asyncio
-        from config import *
-
-        class DemoBot:
-            def __init__(self):
-                self.name = "Instagram Bot Demo"
-                self.version = APP_VERSION
-                self.demo_mode = DEMO_MODE
-                
-            async def start(self):
-                print("🎬 Iniciando bot en modo demostración...")
-                print(f"📱 Configuración:")
-                print(f"   - API_ID: {API_ID}")
-                print(f"   - API_HASH: {API_HASH[:10]}...")
-                print(f"   - BOT_TOKEN: {BOT_TOKEN[:15]}...")
-                print(f"   - Instagram User: {INSTAGRAM_USERNAME}")
-                print(f"   - Demo Mode: {DEMO_MODE}")
-                
-                # Simular inicio de servicios
-                await self.simulate_services()
-                
-            async def simulate_services(self):
-                print("\n🔄 Simulando servicios...")
-                
-                # Simular conexión a Telegram
-                print("📞 Conectando a Telegram... [SIMULADO]")
-                await asyncio.sleep(1)
-                print("✅ Conexión Telegram: OK")
-                
-                # Simular login Instagram
-                print("📷 Iniciando sesión en Instagram... [SIMULADO]")
-                await asyncio.sleep(1)
-                print("✅ Login Instagram: OK")
-                
-                # Simular handlers
-                print("🎯 Registrando handlers... [SIMULADO]")
-                await asyncio.sleep(0.5)
-                print("✅ Handlers registrados")
-                
-                print(f"\n🚀 Bot de demostración listo!")
-                print("💡 Este es un bot de prueba sin funcionalidades reales")
-                
-            async def simulate_video_upload(self, video_info):
-                """Simular subida de video"""
-                print(f"\n🎥 Simulando subida de video...")
-                print(f"   - Archivo: {video_info.get('filename', 'demo.mp4')}")
-                print(f"   - Duración: {video_info.get('duration', 30)}s")
-                print(f"   - Caption: {video_info.get('caption', 'Demo caption')}")
-                await asyncio.sleep(2)
-                print("✅ Video subido a Instagram [SIMULADO]")
-                return True
-
-        if __name__ == "__main__":
-            bot = DemoBot()
-            asyncio.run(bot.start())
-        EOF
-
-    - name: Crear tests de demostración
-      run: |
-        cat > test_demo.py << 'EOF'
-        # Tests de demostración
-        import sys
-        import os
-        sys.path.append('src')
-
-        def test_config_loading():
-            """Test que la configuración se carga correctamente"""
-            from config import API_ID, API_HASH, DEMO_MODE, APP_VERSION
-            assert API_ID == 1234567
-            assert isinstance(API_HASH, str)
-            assert DEMO_MODE == True
-            assert "demo" in APP_VERSION
-            print("✅ test_config_loading: PASSED")
-
-        def test_demo_bot_initialization():
-            """Test que el bot de demo se inicializa"""
-            from demo_bot import DemoBot
-            bot = DemoBot()
-            assert bot.name == "Instagram Bot Demo"
-            assert bot.demo_mode == True
-            print("✅ test_demo_bot_initialization: PASSED")
-
-        def test_directory_structure():
-            """Test que la estructura de directorios es correcta"""
-            assert os.path.exists('src')
-            assert os.path.exists('src/config.py')
-            assert os.path.exists('src/demo_bot.py')
-            print("✅ test_directory_structure: PASSED")
-
-        if __name__ == "__main__":
-            test_config_loading()
-            test_demo_bot_initialization()
-            test_directory_structure()
-            print("\n🎉 Todos los tests de demostración pasaron!")
-        EOF
-
-    - name: Ejecutar tests de demostración
-      run: |
-        python test_demo.py
-
-    - name: Ejecutar bot de demostración
-      run: |
-        cd src
-        python demo_bot.py
-
-    - name: Crear archivo de documentación
-      run: |
-        cat > DEPLOYMENT_REPORT.md << 'EOF'
-        # 📋 Reprorte de Despliegue - Modo Demo
-
-        ## ✅ Estado: DESPLIEGUE EXITOSO
-
-        ### Componentes desplegados:
-
-        1. **Configuración de Demo**
-           - Credenciales ficticias de Telegram
-           - Credenciales ficticias de Instagram  
-           - Modo demostración activado
-
-        2. **Bot de Demostración**
-           - Simulador de conexiones
-           - Simulador de subida de videos
-           - Sin funcionalidades reales
-
-        3. **Tests Automatizados**
-           - Verificación de configuración
-           - Pruebas de inicialización
-           - Validación de estructura
-
-        ### 🔧 Próximos pasos para producción:
-
-        Para usar el bot en producción:
-
-        1. Agregar secrets en GitHub:
-           - `API_ID`, `API_HASH`, `BOT_TOKEN`
-           - `INSTAGRAM_USERNAME`, `INSTAGRAM_PASSWORD`
-
-        2. Reemplazar `demo_bot.py` con el bot real
-        3. Configurar variables de entorno
-
-        ### 📊 Estadísticas del despliegue:
-        - **Python Version:** 3.11
-        - **Modo:** Demo/Testing
-        - **Estado:** Funcionalidad simulada
-        - **Seguridad:** Sin credenciales reales
-
-        **Fecha:** $(date)
-        **Workflow:** ${{ github.workflow }}
-        EOF
-
-    - name: Subir artefactos de demostración
-      uses: actions/upload-artifact@v4
-      with:
-        name: demo-bot-files
-        path: |
-          src/
-          DEPLOYMENT_REPORT.md
-          test_demo.py
-        retention-days: 7
-
-    - name: Mostrar resumen del despliegue
-      run: |
-        echo "=========================================="
-        echo "🎉 DESPLIEGUE DE DEMOSTRACIÓN COMPLETADO"
-        echo "=========================================="
-        echo "📁 Archivos generados:"
-        echo "   - src/config.py (configuración demo)"
-        echo "   - src/demo_bot.py (bot de demostración)" 
-        echo "   - test_demo.py (tests)"
-        echo "   - DEPLOYMENT_REPORT.md (reporte)"
-        echo ""
-        echo "🔧 Modo: Demostración/Testing"
-        echo "🚨 Estado: Sin credenciales reales"
-        echo "✅ Resultado: Éxito"
-        echo "==========================================": [push]
-
-jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda env update --file environment.yml --name base
-    - name: Lint with flake8
-      run: |
-        conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        conda install pytest
-        pytest
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Run bot (for testing/demo)
+        run: |
+          python bot.py
